RESOLVED FIXED300278
[CSS Zoom] Fix zoom factor for inherited letter-spacing
https://bugs.webkit.org/show_bug.cgi?id=300278
Summary [CSS Zoom] Fix zoom factor for inherited letter-spacing
Vitor Roriz
Reported 2025-10-06 19:01:58 PDT
[CSS Zoom] Fix zoom factor for inherited letter-spacing
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-06 19:02:12 PDT
Vitor Roriz
Comment 2 2025-10-06 19:10:11 PDT
EWS
Comment 3 2025-10-09 11:53:13 PDT
Committed 301269@main (a3cf1b778f1a): <https://commits.webkit.org/301269@main> Reviewed commits have been landed. Closing PR #51906 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.